--- a/django/code/templates/main/base.html
+++ b/django/code/templates/main/base.html
@@ -3,11 +3,18 @@
   <head>
     <meta charset="utf-8">
     {% block metas %}{% endblock %}
+
     <title>{% block title %}{% endblock %}</title>
+
     {% block styles %}{% endblock %}
   </head>
   <body>
     {% block content %}{% endblock %}
+
+    <script
+      src="https://code.jquery.com/jquery-3.5.1.min.js"
+      integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
+      crossorigin="anonymous"></script>
     {% block scripts %}{% endblock %}
   </body>
 </html>
