Add tasks diagram scale lines

--- a/django/code/plann/templates/plann/tasks.html
+++ b/django/code/plann/templates/plann/tasks.html
@@ -5,6 +5,11 @@
 
 {% block content %}
   <div id="tasks-box"></div>
+  <div id="tasks-box2">
+    <div>
+      <canvas id="scale" width="1440" height="10"></canvas>
+    </div>
+  </div>
 {% endblock %}
 
 {% block scripts %}
