--- a/django/code/plann/templates/plann/tasks.html
+++ b/django/code/plann/templates/plann/tasks.html
@@ -19,6 +19,7 @@
   <div id="tasks-box"></div>
   <div id="tasks-box2">
     <div>
+      <svg id="scale-day" width="960" height="15"></svg>
       <svg id="scale-numbers" width="960" height="10"></svg>
       <canvas id="scale-linear" width="960" height="10"></canvas>
     </div>
