--- a/django/code/plann/templates/plann/tasks.html
+++ b/django/code/plann/templates/plann/tasks.html
@@ -3,16 +3,13 @@
 
 {% block styles %}
   <style type="text/css">
-    #scale-month, #scale-day {
-      margin-bottom: -10px;
+    .tasks-box-item {
+      background-color: #ccc;
     }
 
-    #scale-numbers {
-      margin-bottom: -5px;
-    }
-
-    .scale-numbers-text {
-      font-size: 13px;
+    .tasks-box-item-value {
+      width: 25%;
+      display: inline-block;
     }
   </style>
 {% endblock %}
@@ -21,14 +18,6 @@
 
 {% block content %}
   <div id="tasks-box"></div>
-  <div id="tasks-box2">
-    <div>
-      <svg id="scale-month" width="960" height="15"></svg>
-      <svg id="scale-day" width="960" height="15"></svg>
-      <svg id="scale-numbers" width="960" height="10"></svg>
-      <canvas id="scale-linear" width="960" height="10"></canvas>
-    </div>
-  </div>
 {% endblock %}
 
 {% block scripts %}
