Add task model choices to frontend

--- a/django/code/plann/templates/plann/tasks.html
+++ b/django/code/plann/templates/plann/tasks.html
@@ -21,5 +21,10 @@
 {% endblock %}
 
 {% block scripts %}
+  <script type="text/javascript">
+    {% autoescape off %}
+      const RAW_CHOISES = '{{ choices }}';
+    {% endautoescape %}
+  </script>
   <script src="{% static 'plann/js/tasks.js' %}"></script>
 {% endblock %}
