Add stack styles

--- a/django/code/plann/templates/plann/tasks.html
+++ b/django/code/plann/templates/plann/tasks.html
@@ -8,7 +8,14 @@
 {% block title %}Tasks{% endblock %}
 
 {% block content %}
-  <div id="tasks-stack"></div>
+  <div id="tasks-stack">
+    <div id="tasks-stack-header">
+      <div class="tasks-stack-cell tasks-stack-cell-name">Name</div>
+      <div class="tasks-stack-cell tasks-stack-cell-priority">Priority</div>
+      <div class="tasks-stack-cell tasks-stack-cell-status">Status</div>
+    </div>
+    <div id="tasks-stack-items"></div>
+  </div>
 {% endblock %}
 
 {% block scripts %}
