--- a/django/code/plann/static/plann/css/tasks.css
+++ b/django/code/plann/static/plann/css/tasks.css
@@ -3,32 +3,58 @@ body {
 }
 
 
-.tasks-stack-cell {
-  width: 33%;
-  display: inline-block;
+#tasks-stack-header {
+  display: flex;
+  box-sizing: border-box;
 }
+#tasks-stack-header > .tasks-stack-cell {
+  padding: 5px 0px;
+  text-align: center;
+  background-color: #fff;
+}
+
 
 .tasks-stack-item {
-  background-color: #f3ecc2;
+  box-sizing: border-box;
 }
 
-.tasks-stack-item-name {
+.tasks-stack-cell {
+  padding: 5px;
+  display: inline-block;
+  background-color: #fcf6d1;
+  box-sizing: border-box;
+  border: solid 0.5px #fff;
+}
+
+.tasks-stack-cell-name {
+  width: 60%;
+}
+.tasks-stack-cell-name-text {
   position: relative;
+  width: max-content;
+}
+
+.tasks-stack-cell-priority {
+  width: 20%;
+}
+
+.tasks-stack-cell-status {
+  width: 20%;
 }
 
 .tasks-stack-item-description {
   width: 15px;
   height: 15px;
-  background-color: #48d8d3;
+  background-color: #fff;
   position: absolute;
-  top: 0px;
-  right: 10px;
+  top: -2px;
+  right: -18px;
   border-radius: 50%;
-  cursor: default;
+  cursor: pointer;
 }
 .tasks-stack-item-description > div {
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-30%, -55%);
+  transform: translate(-50%, -51%);
 }
