Set tasks priorities as colored circles

--- a/django/code/plann/templates/plann/tasks.html
+++ b/django/code/plann/templates/plann/tasks.html
@@ -10,8 +10,8 @@
 {% block content %}
   <div id="tasks-stack">
     <div id="tasks-stack-header">
+      <div class="tasks-stack-cell tasks-stack-cell-priority" title="Priority"></div>
       <div class="tasks-stack-cell tasks-stack-cell-name">Name</div>
-      <div class="tasks-stack-cell tasks-stack-cell-priority">Priority</div>
       <div class="tasks-stack-cell tasks-stack-cell-status">Status</div>
     </div>
     <div id="tasks-stack-items"></div>
