--- a/django/code/plann/static/plann/css/tasks.css
+++ b/django/code/plann/static/plann/css/tasks.css
@@ -14,20 +14,20 @@ body {
 }
 
 
-.tasks-stack-item {
+.tasks-stack-row {
   box-sizing: border-box;
 }
 
 .tasks-stack-cell {
   padding: 5px;
   display: inline-block;
-  background-color: #fcf6d1;
+  background-color: #F9F4D3;
   box-sizing: border-box;
   border: solid 0.5px #fff;
 }
 
 .tasks-stack-cell-name {
-  width: 60%;
+  width: 30%;
 }
 .tasks-stack-cell-name-text {
   position: relative;
@@ -35,14 +35,39 @@ body {
 }
 
 .tasks-stack-cell-priority {
-  width: 20%;
+  width: 25px;
 }
 
 .tasks-stack-cell-status {
-  width: 20%;
+  width: 10%;
 }
 
-.tasks-stack-item-description {
+
+.tasks-stack-cell-item-priority {
+  width: 15px;
+  height: 15px;
+  border-radius: 50%;
+  background-color: #333;
+  display: inline-block;
+}
+.tasks-stack-cell-item-priority-0 {
+  background-color: #ccc;
+}
+.tasks-stack-cell-item-priority-1 {
+  background-color: #14b1ab;
+}
+.tasks-stack-cell-item-priority-2 {
+  background-color: #f9d56e;
+}
+.tasks-stack-cell-item-priority-3 {
+  background-color: #F49CA2;
+}
+.tasks-stack-cell-item-priority-4 {
+  background-color: #E8505B;
+}
+
+
+.tasks-stack-cell-item-description {
   width: 15px;
   height: 15px;
   background-color: #fff;
@@ -52,7 +77,7 @@ body {
   border-radius: 50%;
   cursor: pointer;
 }
-.tasks-stack-item-description > div {
+.tasks-stack-cell-item-description > div {
   position: absolute;
   top: 50%;
   left: 50%;
