--- a/src/django/plann/templates/plann/task_creation/description_textarea.html
+++ b/src/django/plann/templates/plann/task_creation/description_textarea.html
@@ -3,7 +3,7 @@
     <label>{{ field.label|lower }}</label>
   </div>
 
-  <textarea name="{{ field.name }}" class="form-control" {% if style.placeholder %}placeholder="{{ style.placeholder }}"{% endif %} {% if style.rows %}rows="{{ style.rows }}"{% endif %}>{% if field.value %}{{ field.value }}{% endif %}</textarea>
+  <textarea id="task-creation-form-description" name="{{ field.name }}" class="form-control" {% if style.placeholder %}placeholder="{{ style.placeholder }}"{% endif %} {% if style.rows %}rows="{{ style.rows }}"{% endif %}>{% if field.value %}{{ field.value }}{% endif %}</textarea>
 
   {% if field.errors %}
     {% for error in field.errors %}<span class="help-block">{{ error }}</span>{% endfor %}
