Add change status dialog window

--- a/src/django/plann/static/plann/css/tasks.css
+++ b/src/django/plann/static/plann/css/tasks.css
@@ -66,23 +66,27 @@ body {
 }
 
 
-.tasks-stack-cell-item-status {
+.tasks-stack-cell-item-status, .change-status-dialog-item {
   padding: 0px 4px;
   border-radius: 4px;
   text-align: center;
   width: max-content;
   margin: auto;
+  cursor: pointer;
 }
-.tasks-stack-cell-item-status-ns {
+.change-status-dialog-item {
+  margin: 10px auto;
+}
+.tasks-stack-cell-item-status-ns, .change-status-dialog-item-ns {
   background-color: #ddd;
 }
-.tasks-stack-cell-item-status-ip {
+.tasks-stack-cell-item-status-ip, .change-status-dialog-item-ip {
   background-color: #f9d56e;
 }
-.tasks-stack-cell-item-status-cl {
+.tasks-stack-cell-item-status-cl, .change-status-dialog-item-cl {
   background-color: #F49CA2;
 }
-.tasks-stack-cell-item-status-dn {
+.tasks-stack-cell-item-status-dn, .change-status-dialog-item-dn {
   background-color: #6FD8D4;
 }
 
