Add task status changing

--- a/src/django/plann/templates/plann/tasks.html
+++ b/src/django/plann/templates/plann/tasks.html
@@ -30,7 +30,7 @@
     </form>
   </div>
 
-  <div id="change-status-dialog" class="dialog-window dialog-window-open">
+  <div id="change-status-dialog" class="dialog-window">
     <div class="dialog-window-content"></div>
   </div>
 {% endblock %}
