Move tasks stack classes to separate file

--- a/src/django/plann/templates/plann/tasks.html
+++ b/src/django/plann/templates/plann/tasks.html
@@ -41,5 +41,6 @@
       const RAW_CHOISES = '{{ choices }}';
     {% endautoescape %}
   </script>
-  <script src="{% static 'plann/js/tasks.js' %}"></script>
+  <script src="{% static 'plann/js/tasks/stack.js' %}"></script>
+  <script src="{% static 'plann/js/tasks/main.js' %}"></script>
 {% endblock %}
