Add TasksCreation class

--- a/src/django/plann/templates/plann/tasks.html
+++ b/src/django/plann/templates/plann/tasks.html
@@ -42,5 +42,6 @@
     {% endautoescape %}
   </script>
   <script src="{% static 'plann/js/tasks/stack.js' %}"></script>
+  <script src="{% static 'plann/js/tasks/creation.js' %}"></script>
   <script src="{% static 'plann/js/tasks/main.js' %}"></script>
 {% endblock %}
