Move task status changing dialog class to separate file

--- a/src/django/plann/templates/plann/tasks.html
+++ b/src/django/plann/templates/plann/tasks.html
@@ -42,6 +42,7 @@
     {% endautoescape %}
   </script>
   <script src="{% static 'plann/js/tasks/stack.js' %}"></script>
+  <script src="{% static 'plann/js/tasks/dialog.js' %}"></script>
   <script src="{% static 'plann/js/tasks/creation.js' %}"></script>
   <script src="{% static 'plann/js/tasks/main.js' %}"></script>
 {% endblock %}
