--- a/src/django/plann/templates/plann/tasks.html
+++ b/src/django/plann/templates/plann/tasks.html
@@ -12,9 +12,19 @@
 {% block content %}
   <div id="tasks-stack">
     <div id="tasks-stack-header">
-      <div class="tasks-stack-cell tasks-stack-cell-priority" title="Priority"></div>
+      <div class="tasks-stack-cell tasks-stack-cell-priority">
+        <div class="tasks-stack-header-name">
+          <div title="Priority">P</div>
+          <div class="tasks-stack-header-filter"></div>
+        </div>
+      </div>
       <div class="tasks-stack-cell tasks-stack-cell-meaning">Meaning</div>
-      <div class="tasks-stack-cell tasks-stack-cell-status">Status</div>
+      <div class="tasks-stack-cell tasks-stack-cell-status">
+        <div class="tasks-stack-header-name">
+          <div>Status</div>
+          <div class="tasks-stack-header-filter"></div>
+        </div>
+      </div>
     </div>
     <div id="tasks-stack-items"></div>
   </div>
