--- a/src/django/plann/templates/plann/tasks.html
+++ b/src/django/plann/templates/plann/tasks.html
@@ -22,7 +22,7 @@
       <div class="tasks-stack-cell tasks-stack-cell-status">
         <div class="tasks-stack-header-name">
           <div>Status</div>
-          <div class="tasks-stack-header-filter"></div>
+          <div id="tasks-stack-filter-status" class="tasks-stack-header-filter"></div>
         </div>
       </div>
     </div>
@@ -42,6 +42,10 @@
   </div>
 
   <div id="change-status-dialog" class="dialog-window">
+    <div class="dialog-window-content"></div>
+  </div>
+
+  <div id="filter-status-dialog" class="dialog-window">
     <div class="dialog-window-content"></div>
   </div>
 
