--- a/src/django/plann/templates/plann/tasks.html
+++ b/src/django/plann/templates/plann/tasks.html
@@ -15,7 +15,7 @@
       <div class="tasks-stack-cell tasks-stack-cell-priority">
         <div class="tasks-stack-header-name">
           <div title="Priority">P</div>
-          <div class="tasks-stack-header-filter"></div>
+          <div id="tasks-stack-filter-priority" class="tasks-stack-header-filter"></div>
         </div>
       </div>
       <div class="tasks-stack-cell tasks-stack-cell-meaning">Meaning</div>
@@ -46,6 +46,10 @@
   </div>
 
   <div id="filter-status-dialog" class="dialog-window">
+    <div class="dialog-window-content"></div>
+  </div>
+
+  <div id="filter-priority-dialog" class="dialog-window">
     <div class="dialog-window-content"></div>
   </div>
 
