--- a/src/django/plann/static/plann/css/base.css
+++ b/src/django/plann/static/plann/css/base.css
@@ -11,3 +11,21 @@
 #wait-screen.wait-screen-enabled {
   display: block
 }
+
+
+.styled-checkbox {
+  display: none;
+}
+.styled-checkbox + label {
+  cursor: pointer;
+  width: 15px;
+  height: 15px;
+  border-radius: 50%;
+  display: inline-block;
+  margin-right: 10px;
+  transform: translate(0, 15%);
+  background-color: #ddd;
+}
+.styled-checkbox:checked + label {
+  background-color: #14b1ab;
+}
