Add global urls object

--- a/src/django/plann/templates/plann/tasks.html
+++ b/src/django/plann/templates/plann/tasks.html
@@ -60,6 +60,7 @@
   <script type="text/javascript">
     {% autoescape off %}
       const RAW_CHOISES = '{{ choices }}';
+      const RAW_URLS = '{{ urls }}';
     {% endautoescape %}
   </script>
   <script src="{% static 'plann/js/tasks/stack.js' %}"></script>
