Add tasks page js file builder

--- a/src/django/plann/templates/plann/tasks.html
+++ b/src/django/plann/templates/plann/tasks.html
@@ -63,8 +63,5 @@
       const RAW_URLS = '{{ urls }}';
     {% endautoescape %}
   </script>
-  <script src="{% static 'plann/js/tasks/stack.js' %}"></script>
-  <script src="{% static 'plann/js/tasks/dialog.js' %}"></script>
-  <script src="{% static 'plann/js/tasks/creation.js' %}"></script>
-  <script src="{% static 'plann/js/tasks/main.js' %}"></script>
+  <script src="{% static 'plann/js/tasks.min.js' %}"></script>
 {% endblock %}
