Add tasks page css files builders

--- a/src/django/plann/templates/plann/tasks.html
+++ b/src/django/plann/templates/plann/tasks.html
@@ -2,9 +2,9 @@
 {% load static rest_framework %}
 
 {% block styles %}
-  <link rel="stylesheet" type="text/css" href="{% static 'plann/css/base.css' %}">
-  <link rel="stylesheet" type="text/css" href="{% static 'plann/css/tasks.css' %}">
-  <link rel="stylesheet" type="text/css" href="{% static 'plann/css/dialog.css' %}">
+  <link rel="stylesheet" type="text/css" href="{% static 'plann/css/base.min.css' %}">
+  <link rel="stylesheet" type="text/css" href="{% static 'plann/css/tasks.min.css' %}">
+  <link rel="stylesheet" type="text/css" href="{% static 'plann/css/dialog.min.css' %}">
 {% endblock %}
 
 {% block title %}Tasks{% endblock %}
