--- a/src/node/src/plann/less/tasks/dialog.less
+++ b/src/node/src/plann/less/tasks/dialog.less
@@ -7,9 +7,10 @@
   height: 100%;
   display: none;
   cursor: pointer;
-}
-.dialog-window.dialog-window-open {
-  display: block;
+
+  &.dialog-window-open {
+    display: block;
+  }
 }
 
 
