--- a/src/node/src/plann/less/tasks/main.less
+++ b/src/node/src/plann/less/tasks/main.less
@@ -1,62 +1,7 @@
-body {
-  color: #333;
-}
-#wait-screen {
-  display: none;
-  position: fixed;
-  top: 0px;
-  left: 0px;
-  width: 100%;
-  height: 100%;
-  z-index: 1000;
-  cursor: wait;
-}
-#wait-screen.wait-screen-enabled {
-  display: block;
-}
-.styled-checkbox {
-  display: none;
-}
-.styled-checkbox + label {
-  cursor: pointer;
-  width: 15px;
-  height: 15px;
-  border-radius: 50%;
-  display: inline-block;
-  margin-right: 10px;
-  transform: translate(0, 15%);
-  background-color: #ddd;
-}
-.styled-checkbox:checked + label {
-  background-color: #14b1ab;
-}
-.dialog-window {
-  position: fixed;
-  background-color: #00000050;
-  top: 0px;
-  left: 0px;
-  width: 100%;
-  height: 100%;
-  display: none;
-  cursor: pointer;
-}
-.dialog-window.dialog-window-open {
-  display: block;
-}
-.dialog-window-content {
-  position: absolute;
-  min-width: 100px;
-  min-height: 100px;
-  width: max-content;
-  height: max-content;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  background-color: #f9f4d3;
-  padding: 10px;
-  border-radius: 4px;
-  cursor: default;
-}
+@import "base";
+@import "dialog";
+
+
 #tasks-stack-header {
   display: flex;
   box-sizing: border-box;
@@ -66,11 +11,13 @@ body {
   text-align: center;
   background-color: #fff;
 }
+
 .tasks-stack-header-name {
   width: max-content;
   position: relative;
   margin: auto;
 }
+
 .tasks-stack-header-filter {
   width: 12px;
   height: 12px;
@@ -83,7 +30,7 @@ body {
 .tasks-stack-header-filter:hover {
   background-color: #f9d56e;
 }
-.tasks-stack-header-filter:after {
+.tasks-stack-header-filter:after{
   content: "";
   width: 100%;
   height: 100%;
@@ -93,9 +40,12 @@ body {
   clip-path: polygon(10% 5%, 90% 5%, 55% 50%, 55% 90%, 45% 90%, 45% 50%);
   background-color: black;
 }
+
+
 .tasks-stack-row {
   box-sizing: border-box;
 }
+
 .tasks-stack-cell {
   padding: 5px;
   display: inline-block;
@@ -103,6 +53,7 @@ body {
   box-sizing: border-box;
   border: solid 0.5px #fff;
 }
+
 .tasks-stack-cell-meaning {
   width: 30%;
 }
@@ -133,12 +84,16 @@ body {
   left: 50%;
   transform: translate(-50%, -51%);
 }
+
 .tasks-stack-cell-priority {
   width: 25px;
 }
+
 .tasks-stack-cell-status {
   width: 10%;
 }
+
+
 .tasks-stack-item-priority {
   width: 15px;
   height: 15px;
@@ -175,6 +130,8 @@ body {
   margin: 6px auto;
   cursor: pointer;
 }
+
+
 .tasks-stack-item-status {
   padding: 0px 4px;
   border-radius: 4px;
@@ -202,41 +159,51 @@ body {
   margin: 6px auto;
   display: inline-block;
 }
+
+
 #tasks-creation {
   position: fixed;
   top: 9px;
   right: 15px;
 }
+
 #tasks-creation-header > div {
   width: max-content;
   margin: auto;
   padding: 5px;
 }
+
 #task-creation-form {
   background-color: #f9f4d3;
   padding: 10px;
   border-radius: 4px;
 }
+
 .task-creation-item-label {
   display: inline-block;
   min-width: 110px;
 }
+
 #task-creation-form-name {
   width: 190px;
 }
+
 #task-creation-form-description {
   border-radius: 4px;
   width: 200px;
   height: 50px;
 }
+
 #task-creation-form-priority {
   width: 205px;
 }
+
 #task-creation-form-button-box {
   width: max-content;
   margin: auto;
   padding: 10px 5px 0px;
 }
+
 #task-creation-form-button {
   background-color: #f9d56e;
   border-style: unset;
@@ -247,6 +214,7 @@ body {
 #task-creation-form-button:hover {
   background-color: #bba66d;
 }
+
 .form-group {
   padding: 5px 0;
 }
