Add less colors map

--- a/src/django/plann/templates/plann/tasks.html
+++ b/src/django/plann/templates/plann/tasks.html
@@ -31,10 +31,10 @@
     <div id="tasks-creation-header">
       <div>Create task</div>
     </div>
-    <form id="task-creation-form">
+    <form id="tasks-creation-form">
       {% render_form create_task_serializer %}
-      <div id="task-creation-form-button-box">
-        <input id="task-creation-form-button" type="submit" value="Create">
+      <div id="tasks-creation-form-button-box">
+        <input id="tasks-creation-form-button" type="submit" value="Create">
       </div>
     </form>
   </div>
