--- a/src/node/src/plann/less/tasks/creation.less
+++ b/src/node/src/plann/less/tasks/creation.less
@@ -10,7 +10,7 @@
   }
 
   &-form {
-    background-color: #f9f4d3;
+    background-color: #colors[secondary-light];
     padding: 10px;
     border-radius: 4px;
 
@@ -29,14 +29,14 @@
     }
 
     &-button {
-      background-color: #f9d56e;
+      background-color: #colors[accent-yellow];
       border-style: unset;
       border-radius: 4px;
       padding: 5px 10px;
       cursor: pointer;
 
       &:hover {
-        background-color: #bba66d;
+        background-color: #colors[accent-yellow-dark];
       }
 
       &-box {
@@ -49,7 +49,7 @@
 }
 
 
-.task-creation-item-label {
+.tasks-creation-item-label {
   display: inline-block;
   min-width: 110px;
 }
