--- a/src/node/src/plann/less/tasks/main.less
+++ b/src/node/src/plann/less/tasks/main.less
@@ -1,167 +1,4 @@
 @import "base";
 @import "dialog";
 @import "creation";
-
-
-#tasks-stack-header {
-  display: flex;
-  box-sizing: border-box;
-}
-#tasks-stack-header > .tasks-stack-cell {
-  padding: 5px 0px;
-  text-align: center;
-  background-color: #colors[primary-white];
-}
-
-.tasks-stack-header-name {
-  width: max-content;
-  position: relative;
-  margin: auto;
-}
-
-.tasks-stack-header-filter {
-  width: 12px;
-  height: 12px;
-  position: absolute;
-  top: 0px;
-  right: -12px;
-  cursor: pointer;
-  border-radius: 50%;
-}
-.tasks-stack-header-filter:hover {
-  background-color: #colors[accent-yellow];
-}
-.tasks-stack-header-filter:after{
-  content: "";
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  top: 0px;
-  left: 0px;
-  clip-path: polygon(10% 5%, 90% 5%, 55% 50%, 55% 90%, 45% 90%, 45% 50%);
-  background-color: black;
-}
-
-
-.tasks-stack-row {
-  box-sizing: border-box;
-}
-
-.tasks-stack-cell {
-  padding: 5px;
-  display: inline-block;
-  background-color: #colors[secondary-light];
-  box-sizing: border-box;
-  border: solid 0.5px #colors[primary-white];
-}
-
-.tasks-stack-cell-meaning {
-  width: 30%;
-}
-.tasks-stack-cell-meaning-wrapper {
-  position: relative;
-  width: max-content;
-}
-.tasks-stack-cell-meaning-name {
-  width: max-content;
-}
-.tasks-stack-cell-meaning-description {
-  width: 15px;
-  height: 15px;
-  background-color: #colors[primary-white];
-  position: absolute;
-  top: -2px;
-  right: -18px;
-  border-radius: 50%;
-  cursor: pointer;
-  display: none;
-}
-.tasks-stack-cell-meaning-description.tasks-stack-cell-meaning-description-show {
-  display: block;
-}
-.tasks-stack-cell-meaning-description > div {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -51%);
-}
-
-.tasks-stack-cell-priority {
-  width: 25px;
-}
-
-.tasks-stack-cell-status {
-  width: 10%;
-}
-
-
-.tasks-stack-item-priority {
-  width: 15px;
-  height: 15px;
-  border-radius: 50%;
-  display: inline-block;
-}
-.tasks-stack-item-priority-0 {
-  background-color: #colors[accent-grey-lighter];
-}
-.tasks-stack-item-priority-1 {
-  background-color: #colors[accent-green];
-}
-.tasks-stack-item-priority-1.filter-priority-dialog-item {
-  background-color: #colors[accent-green-lighter];
-}
-.tasks-stack-item-priority-2 {
-  background-color: #colors[accent-yellow];
-}
-.tasks-stack-item-priority-3 {
-  background-color: #colors[accent-red-lighter];
-}
-.tasks-stack-item-priority-4 {
-  background-color: #colors[accent-red];
-}
-.tasks-stack-item-priority-4.filter-priority-dialog-item {
-  background-color: #colors[accent-red-light];
-}
-.filter-priority-dialog-item {
-  width: max-content;
-  height: max-content;
-  border-radius: 4px;
-  display: inline-block;
-  padding: 0px 5px;
-  margin: 6px auto;
-  cursor: pointer;
-}
-
-
-.tasks-stack-item-status {
-  padding: 0px 4px;
-  border-radius: 4px;
-  text-align: center;
-  width: max-content;
-  margin: auto;
-  cursor: pointer;
-}
-.tasks-stack-item-status-ns {
-  background-color: #colors[accent-grey-lighter];
-}
-.tasks-stack-item-status-ip {
-  background-color: #colors[accent-yellow];
-}
-.tasks-stack-item-status-cl {
-  background-color: #colors[accent-red-lighter];
-}
-.tasks-stack-item-status-dn {
-  background-color: #colors[accent-green-lighter];;
-}
-.change-status-dialog-item {
-  margin: 10px auto;
-}
-.filter-status-dialog-item {
-  margin: 6px auto;
-  display: inline-block;
-}
-
-
-.form-group {
-  padding: 5px 0;
-}
+@import "stack";
