--- a/src/django/templates/main/base.html
+++ b/src/django/templates/main/base.html
@@ -15,6 +15,12 @@
       src="https://code.jquery.com/jquery-3.5.1.min.js"
       integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
       crossorigin="anonymous"></script>
+    <script
+      src="https://unpkg.com/react@17/umd/react.development.js"
+      crossorigin></script>
+    <script
+      src="https://unpkg.com/react-dom@17/umd/react-dom.development.js"
+      crossorigin></script>
     {% block scripts %}{% endblock %}
   </body>
 </html>
