Add base dialog component

--- a/src/django/plann/templates/plann/tasks.html
+++ b/src/django/plann/templates/plann/tasks.html
@@ -39,9 +39,7 @@
     </form>
   </div>
 
-  <div id="change-status-dialog" class="dialog-window">
-    <div class="dialog-window-content"></div>
-  </div>
+  <div id="change-status-dialog"></div>
 
   <div id="filter-status-dialog" class="dialog-window">
     <div class="dialog-window-content"></div>
