Improve filter components

--- a/src/django/plann/templates/plann/tasks.html
+++ b/src/django/plann/templates/plann/tasks.html
@@ -40,14 +40,8 @@
   </div>
 
   <div id="change-status-dialog"></div>
-
-  <div id="filter-status-dialog" class="dialog-window">
-    <div class="dialog-window-content"></div>
-  </div>
-
-  <div id="filter-priority-dialog" class="dialog-window">
-    <div class="dialog-window-content"></div>
-  </div>
+  <div id="filter-status-dialog"></div>
+  <div id="filter-priority-dialog"></div>
 
   <div id="wait-screen"></div>
 {% endblock %}
