--- a/src/django/plann/templates/plann/tasks.html
+++ b/src/django/plann/templates/plann/tasks.html
@@ -27,17 +27,7 @@
     <div id="tasks-stack-items"></div>
   </div>
 
-  <div id="tasks-creation">
-    <div id="tasks-creation-header">
-      <div>Create task</div>
-    </div>
-    <form id="tasks-creation-form">
-      {% render_form create_task_serializer %}
-      <div id="tasks-creation-form-button-box">
-        <input id="tasks-creation-form-button" type="submit" value="Create">
-      </div>
-    </form>
-  </div>
+  <div id="tasks-creation"></div>
 
   <div id="change-status-dialog"></div>
   <div id="filter-status-dialog"></div>
@@ -51,6 +41,7 @@
     {% autoescape off %}
       const RAW_CHOISES = '{{ choices }}';
       const RAW_URLS = '{{ urls }}';
+      const CREATE_TASK_RAW_FORM = `{% render_form create_task_serializer %}`;
     {% endautoescape %}
   </script>
   <script src="{% static 'plann/js/tasks.min.js' %}"></script>
