--- a/src/django/plann/templates/plann/tasks.html
+++ b/src/django/plann/templates/plann/tasks.html
@@ -39,8 +39,8 @@
 {% block scripts %}
   <script type="text/javascript">
     {% autoescape off %}
-      const RAW_CHOISES = '{{ choices }}';
-      const RAW_URLS = '{{ urls }}';
+      const CHOISES = JSON.parse('{{ choices }}');
+      const URLS = JSON.parse('{{ urls }}');
       const CREATE_TASK_RAW_FORM = `{% render_form create_task_serializer %}`;
     {% endautoescape %}
   </script>
