Move task creation form to dialog window

--- a/src/django/plann/templates/plann/tasks.html
+++ b/src/django/plann/templates/plann/tasks.html
@@ -27,11 +27,10 @@
     <div id="tasks-stack-items"></div>
   </div>
 
-  <div id="tasks-creation"></div>
-
   <div id="change-status-dialog"></div>
   <div id="filter-status-dialog"></div>
   <div id="filter-priority-dialog"></div>
+  <div id="creation-dialog"></div>
 
   <div id="wait-screen"></div>
 {% endblock %}
