Add creation button

--- a/src/django/plann/templates/plann/tasks.html
+++ b/src/django/plann/templates/plann/tasks.html
@@ -8,6 +8,8 @@
 {% block title %}Tasks{% endblock %}
 
 {% block content %}
+  <div id="creation-button"></div>
+
   <div id="tasks-stack">
     <div id="tasks-stack-header">
       <div class="tasks-stack-cell tasks-stack-cell-priority">
