Improve creation button

--- a/src/gulp/src/plann/less/tasks/creation.less
+++ b/src/gulp/src/plann/less/tasks/creation.less
@@ -1,8 +1,9 @@
-#tasks-creation {
-  position: fixed;
-  top: 9px;
-  right: 15px;
+#creation-button > div {
+  width: max-content;
+  padding: 5px;
+}
 
+#tasks-creation {
   &-header > div {
     width: max-content;
     margin: auto;
@@ -29,15 +30,7 @@
     }
 
     &-button {
-      background-color: #colors[accent-yellow];
-      border-style: unset;
-      border-radius: 4px;
       padding: 5px 10px;
-      cursor: pointer;
-
-      &:hover {
-        background-color: #colors[accent-yellow-dark];
-      }
 
       &-box {
         width: max-content;
