Add tags component

--- a/src/django/plann/templates/plann/tasks.html
+++ b/src/django/plann/templates/plann/tasks.html
@@ -25,6 +25,7 @@
           <div id="tasks-stack-filter-status" class="tasks-stack-header-filter"></div>
         </div>
       </div>
+      <div class="tasks-stack-cell tasks-stack-cell-tags">Tags</div>
     </div>
     <div id="tasks-stack-items"></div>
   </div>
